--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"bcryptjs": "^2.4.3",
 		"dayjs": "^1.11.3",
 		"framer-motion": "^6.3.11",
+		"graphql-request": "^4.3.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.4.0",
@@ -35,6 +36,7 @@
 		"@types/react": "^17.0.45",
 		"@types/react-dom": "^17.0.17",
 		"eslint": "^8.15.0",
+		"graphql": "^16.5.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.7.1",
 		"prettier-plugin-tailwindcss": "^0.1.11",
