--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-dropdown-menu": "^0.1.6",
+		"@radix-ui/react-popover": "^0.1.6",
+		"@radix-ui/react-select": "^0.1.1",
 		"@remix-run/node": "^1.6.0",
 		"@remix-run/react": "^1.6.0",
 		"@remix-run/vercel": "^1.6.0",
