--- a/package.json
+++ b/package.json
@@ -13,36 +13,26 @@
 	"dependencies": {
 		"@floating-ui/react-dom": "^0.7.2",
 		"@headlessui/react": "^1.6.5",
-		"@popperjs/core": "^2.11.5",
-		"@radix-ui/react-dropdown-menu": "^0.1.6",
-		"@radix-ui/react-popover": "^0.1.6",
-		"@radix-ui/react-select": "^0.1.1",
+		"@radix-ui/react-context-menu": "^0.1.6",
 		"@remix-run/node": "^1.6.0",
 		"@remix-run/react": "^1.6.0",
 		"@remix-run/vercel": "^1.6.0",
 		"@supabase/supabase-js": "^1.35.3",
 		"@vercel/node": "^1.15.2",
-		"bcryptjs": "^2.4.3",
 		"dayjs": "^1.11.3",
 		"framer-motion": "^6.3.11",
-		"graphql-request": "^4.3.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.4.0",
-		"react-popper": "^2.3.0",
-		"react-use-measure": "^2.1.1",
-		"remix-auth": "^3.2.2",
-		"remix-auth-supabase": "^4.0.0"
+		"react-use-measure": "^2.1.1"
 	},
 	"devDependencies": {
 		"@remix-run/dev": "^1.6.0",
 		"@remix-run/eslint-config": "^1.6.0",
 		"@remix-run/serve": "^1.6.0",
-		"@types/bcryptjs": "^2.4.2",
 		"@types/react": "^17.0.45",
 		"@types/react-dom": "^17.0.17",
 		"eslint": "^8.15.0",
-		"graphql": "^16.5.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.7.1",
 		"prettier-plugin-tailwindcss": "^0.1.11",
