--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"dayjs": "^1.11.3",
 		"framer-motion": "^6.3.11",
 		"react": "^17.0.2",
+		"react-beautiful-dnd": "^13.1.0",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.4.0",
 		"react-use-measure": "^2.1.1"
@@ -31,6 +32,7 @@
 		"@remix-run/eslint-config": "^1.6.0",
 		"@remix-run/serve": "^1.6.0",
 		"@types/react": "^17.0.45",
+		"@types/react-beautiful-dnd": "^13.1.2",
 		"@types/react-dom": "^17.0.17",
 		"eslint": "^8.15.0",
 		"npm-run-all": "^4.1.5",
